I added the flex wrap property because I wanted to demonstrate the action the flex wrap property takes to ensure all of the flex items don't overlap the container if resized

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -10,5 +10,6 @@ one line. One flex line.*/
 .container {
   display: flex;
   /*flex-direction is only applicable with the flex container*/
-  flex-direction: column;
+  flex-direction: row;
+  lex-wrap:wrap;
 }
